--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="0dp"
         android:padding="5dp">
 
 
         <Button
             android:id="@+id/btnAdd"
-            android:layout_width="match_parent"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="118dp"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Add" />
+            android:background="@android:color/holo_blue_dark"
+            android:text="New Memo" />
+
+        <Button
+            android:id="@+id/btnImportance"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="118dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginRight="6dp"
+            android:background="@android:color/background_light"
+            android:text="Importance"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+            android:textColor="@android:color/holo_blue_dark" />
+
+        <Button
+            android:id="@+id/btnDate"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="118dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="147dp"
+            android:layout_marginLeft="147dp"
+            android:layout_marginEnd="134dp"
+            android:layout_marginRight="134dp"
+            android:background="@android:color/background_light"
+            android:text="Date"
+            android:textColor="@android:color/holo_blue_dark" />
 
         <View
             android:layout_width="match_parent"
