--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -5,17 +5,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/layout_list">
+
 
         <ImageView
             android:id="@+id/btnEdit"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_alignParentLeft="true"
+            app:srcCompat="@android:drawable/ic_menu_edit"
 
             />
 
