--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,26 +32,26 @@
             android:layout_toRightOf="@+id/btnAdd"
             android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/radioImp"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:background="@android:color/background_light"
-            android:text="Importance"
-            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
-            android:textColor="@android:color/holo_blue_dark" />
+            <RadioButton
+                android:id="@+id/radioImp"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="136dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:background="@android:color/background_light"
+                android:text="Importance"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
+                android:textColor="@android:color/holo_blue_dark" />
 
-        <RadioButton
-            android:id="@+id/radioDate"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:background="@android:color/background_light"
-            android:text="Date"
-            android:textColor="@android:color/holo_blue_dark" />
+            <RadioButton
+                android:id="@+id/radioDate"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:background="@android:color/background_light"
+                android:text="Date"
+                android:textColor="@android:color/holo_blue_dark" />
         </RadioGroup>
 
         <View
@@ -62,7 +62,7 @@
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/lvMemos"
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/layoutBottom"
