Changed Priority and Date from radio to regular buttons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B1B</color>
 
-    <color name="navbar_background">#89cff0</color>
+    <color name="navbar_background">#98C1D5</color>
 </resources>
 
 
