--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,37 +22,33 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="118dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_gravity="bottom"
             android:background="@android:color/holo_blue_dark"
             android:text="New Memo" />
 
-        <RadioGroup
-            android:id="@+id/radioGroupSort"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btnImp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="118dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/btnAdd"
-            android:orientation="horizontal">
+            android:layout_centerInParent="true"
+            android:background="@color/navbar_background"
+            android:text="Sort by Priority" />
 
-            <RadioButton
-                android:id="@+id/radioImp"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="136dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:background="@android:color/background_light"
-                android:text="Importance"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
-                android:textColor="@android:color/holo_blue_dark" />
+        <Button
+            android:id="@+id/btnDate"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="118dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="bottom"
 
-            <RadioButton
-                android:id="@+id/radioDate"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:background="@android:color/background_light"
-                android:text="Date"
-                android:textColor="@android:color/holo_blue_dark" />
-        </RadioGroup>
+            android:background="@color/navbar_background"
+            android:text="Sort by Date" />
+
 
         <View
             android:layout_width="match_parent"
